@@ -1,0 +1,12 @@
+;; installed in a subdirectory of the respective site-lisp directory.
+;; We have to add this to the load-path:
+(setq load-path (cons (concat "/usr/share/"
+		(symbol-name debian-emacs-flavor)
+		"/site-lisp/gwydion-dylan") load-path))
+
+(autoload 'dylan-mode "gwydion-dylan"
+        "Major mode for editing Dylan source code" t)
+(setq auto-mode-alist (cons '("\\.dylan$" . dylan-mode) auto-mode-alist))
+(setq auto-mode-alist (cons '("\\.lid$" . dylan-mode) auto-mode-alist))
+(setq auto-mode-alist (cons '("\\.dylanintr$" . ciao-mode) auto-mode-alist))
+																						  
